<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_profile">

  <fragment
    android:id="@+id/nav_profile"
    android:label="@string/menu_profile"
    android:name="edu.cnm.deepdive.albuquirky.controller.ui.profile.ProfileFragment"
    tools:layout="@layout/fragment_profile"/>

  <fragment
    android:id="@+id/nav_products"
    android:label="@string/menu_products"
    android:name="edu.cnm.deepdive.albuquirky.controller.ui.products.ProductsFragment"
    tools:layout="@layout/fragment_products"/>

  <fragment
    android:id="@+id/nav_commission"
    android:label="@string/menu_commissions"
    android:name="edu.cnm.deepdive.albuquirky.controller.ui.commission.CommissionFragment"
    tools:layout="@layout/fragment_commissions"/>

  <fragment
    android:id="@+id/nav_orders"
    android:label="@string/menu_orders"
    android:name="edu.cnm.deepdive.albuquirky.controller.ui.orders.OrdersFragment"
    tools:layout="@layout/fragment_orders"/>

  <fragment
    android:id="@+id/nav_browser"
    android:label="@string/menu_browser"
    android:name="edu.cnm.deepdive.albuquirky.controller.ui.BrowserFragment"
    tools:layout="@layout/fragment_browser"/>
</navigation>