<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.ui.orders.OrdersFragment">

  <LinearLayout
    android:id="@+id/order_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/colorSecondary">

    <ImageView
      android:id="@+id/product_order_image"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:contentDescription="@string/product_image"
      android:src="@drawable/aq_image_placeholder"/>

    <LinearLayout
      android:id="@+id/order_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="15dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/item_name_order_id"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number"
        android:textSize="25sp"/>

      <TextView
        android:id="@+id/order_date_placed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_placed"
        android:textSize="15sp"
        tools:text="12/3/20"/>

      <TextView
        android:id="@+id/item_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_cost"
        android:textSize="15sp"
        tools:text="$44.99"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/order_fulfilled_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="15dp">

      <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="10dp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/order_fulfilled"
        android:textAlignment="center"/>

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/item2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/order_container"
    android:background="@color/colorSecondary"
    android:clickable="true"
    android:focusable="true">

    <ImageView
      android:id="@+id/item2_image"
      android:layout_width="80dp"
      android:layout_height="84dp"
      android:contentDescription="@string/product_image"
      android:src="@drawable/aq_image_placeholder"/>

    <LinearLayout
      android:id="@+id/order2_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="15dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/item2_name"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order #321XY"
        android:textSize="25sp"
        tools:text="Order #2442SD"/>

      <TextView
        android:id="@+id/order2_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12/02/20"
        android:textSize="15sp"
        tools:text="12/3/20"/>

      <TextView
        android:id="@+id/item2_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$24.99"
        android:textSize="15sp"
        tools:text="$44.99"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/order2_fulfilled_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="15dp">

      <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="10dp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/order_fulfilled"
        android:textAlignment="center"/>

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/item3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/item2"
    android:background="@color/colorSecondary"
    android:clickable="true"
    android:focusable="true">

    <ImageView
      android:id="@+id/item3_image"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:contentDescription="@string/product_image"
      android:src="@drawable/aq_image_placeholder"/>

    <LinearLayout
      android:id="@+id/order3_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="15dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/item3_name"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order #543IO"
        android:textSize="25sp"
        tools:text="Order #2442SD"/>

      <TextView
        android:id="@+id/order3_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12/01/20"
        android:textSize="15sp"
        tools:text="12/3/20"/>

      <TextView
        android:id="@+id/item3_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8.99"
        android:textSize="15sp"
        tools:text="$44.99"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/order3_fulfilled_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="15dp">

      <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="10dp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/order_fulfilled"
        android:textAlignment="center"/>

    </LinearLayout>

  </LinearLayout>

<!--  <LinearLayout-->
<!--    android:id="@+id/item4"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:padding="20dp"-->
<!--    android:layout_margin="8dp"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@id/item3"-->
<!--    android:background="@color/colorSecondary"-->
<!--    android:clickable="true"-->
<!--    android:focusable="true">-->

<!--    <ImageView-->
<!--      android:id="@+id/item4_image"-->
<!--      android:layout_width="80dp"-->
<!--      android:layout_height="80dp"-->
<!--      android:contentDescription="@string/product_image"-->
<!--      android:src="@drawable/aq_image_placeholder"/>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order4_info"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginStart="15dp"-->
<!--      android:orientation="vertical">-->

<!--      <TextView-->
<!--        android:id="@+id/item4_name"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/order_number"-->
<!--        android:textSize="25sp"-->
<!--        tools:text="Order #2442SD"/>-->

<!--      <TextView-->
<!--        android:id="@+id/order4_date"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/date_placed"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="12/3/20"/>-->

<!--      <TextView-->
<!--        android:id="@+id/item4_cost"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/item_cost"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="$44.99"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order4_fulfilled_box"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:orientation="vertical"-->
<!--      android:layout_margin="15dp">-->

<!--      <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_marginStart="10dp"/>-->

<!--      <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/order_fulfilled"-->
<!--        android:textAlignment="center"/>-->

<!--    </LinearLayout>-->

<!--  </LinearLayout>-->

<!--  <LinearLayout-->
<!--    android:id="@+id/item5"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:padding="20dp"-->
<!--    android:layout_margin="8dp"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@id/item4"-->
<!--    android:background="@color/colorSecondary"-->
<!--    android:clickable="true"-->
<!--    android:focusable="true">-->

<!--    <ImageView-->
<!--      android:id="@+id/item5_image"-->
<!--      android:layout_width="80dp"-->
<!--      android:layout_height="80dp"-->
<!--      android:contentDescription="@string/product_image"-->
<!--      android:src="@drawable/aq_image_placeholder"/>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order5_info"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginStart="15dp"-->
<!--      android:orientation="vertical">-->

<!--      <TextView-->
<!--        android:id="@+id/item5_name"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/order_number"-->
<!--        android:textSize="25sp"-->
<!--        tools:text="Order #2442SD"/>-->

<!--      <TextView-->
<!--        android:id="@+id/order5_date"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/date_placed"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="12/3/20"/>-->

<!--      <TextView-->
<!--        android:id="@+id/item5_cost"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/item_cost"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="$44.99"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order5_fulfilled_box"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:orientation="vertical"-->
<!--      android:layout_margin="15dp">-->

<!--      <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_marginStart="10dp"/>-->

<!--      <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/order_fulfilled"-->
<!--        android:textAlignment="center"/>-->

<!--    </LinearLayout>-->

<!--  </LinearLayout>-->

<!--  <LinearLayout-->
<!--    android:id="@+id/item6"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:padding="20dp"-->
<!--    android:layout_margin="8dp"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@id/item5"-->
<!--    android:background="@color/colorSecondary"-->
<!--    android:clickable="true"-->
<!--    android:focusable="true">-->

<!--    <ImageView-->
<!--      android:id="@+id/item6_image"-->
<!--      android:layout_width="80dp"-->
<!--      android:layout_height="80dp"-->
<!--      android:contentDescription="@string/product_image"-->
<!--      android:src="@drawable/aq_image_placeholder"/>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order6_info"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginStart="15dp"-->
<!--      android:orientation="vertical">-->

<!--      <TextView-->
<!--        android:id="@+id/item6_name"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/order_number"-->
<!--        android:textSize="25sp"-->
<!--        tools:text="Order #2442SD"/>-->

<!--      <TextView-->
<!--        android:id="@+id/order6_date"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/date_placed"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="12/3/20"/>-->

<!--      <TextView-->
<!--        android:id="@+id/item6_cost"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/item_cost"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="$44.99"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order6_fulfilled_box"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:orientation="vertical"-->
<!--      android:layout_margin="15dp">-->

<!--      <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_marginStart="10dp"/>-->

<!--      <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/order_fulfilled"-->
<!--        android:textAlignment="center"/>-->

<!--    </LinearLayout>-->

<!--  </LinearLayout>-->

<!--  <LinearLayout-->
<!--    android:id="@+id/item7"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:padding="20dp"-->
<!--    android:layout_margin="8dp"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@id/item6"-->
<!--    android:background="@color/colorSecondary"-->
<!--    android:clickable="true"-->
<!--    android:focusable="true">-->

<!--    <ImageView-->
<!--      android:id="@+id/item7_image"-->
<!--      android:layout_width="80dp"-->
<!--      android:layout_height="80dp"-->
<!--      android:contentDescription="@string/product_image"-->
<!--      android:src="@drawable/aq_image_placeholder"/>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order7_info"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginStart="15dp"-->
<!--      android:orientation="vertical">-->

<!--      <TextView-->
<!--        android:id="@+id/item7_name"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/order_number"-->
<!--        android:textSize="25sp"-->
<!--        tools:text="Order #2442SD"/>-->

<!--      <TextView-->
<!--        android:id="@+id/order7_date"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/date_placed"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="12/3/20"/>-->

<!--      <TextView-->
<!--        android:id="@+id/item7_cost"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/item_cost"-->
<!--        android:textSize="15sp"-->
<!--        tools:text="$44.99"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--      android:id="@+id/order7_fulfilled_box"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:orientation="vertical"-->
<!--      android:layout_margin="15dp">-->

<!--      <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_marginStart="10dp"/>-->

<!--      <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/order_fulfilled"-->
<!--        android:textAlignment="center"/>-->

<!--    </LinearLayout>-->

<!--  </LinearLayout>-->




</androidx.constraintlayout.widget.ConstraintLayout>